webapp-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: mj-service
spec:
  selector:
    app: mj
  ports:
  - protocol: TCP
    port: 80
  type: NodePort
